--- a/cicd/buildDeploy.yml
+++ b/cicd/buildDeploy.yml
@@ -22,6 +22,11 @@ stages:
       vmImage: $(vmImageName)
 
     steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '6.x'
+        includePreviewVersions: true
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
