--- a/src/FunctionApp/ECMA.APP.csproj
+++ b/src/FunctionApp/ECMA.APP.csproj
@@ -4,6 +4,12 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Validations\SchemaValidation\contract-schema.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Validations\SchemaValidation\contract-schema.json" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
@@ -13,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="NJsonSchema" Version="10.6.10" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
