--- a/cicd/buildDeploy.yml
+++ b/cicd/buildDeploy.yml
@@ -1,8 +1,3 @@
-# .NET Core Function App to Windows on Azure
-# Build a .NET Core function app and deploy it to Azure as a Windows function App.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/en-us/azure/devops/pipelines/languages/dotnet-core
-
 trigger: none
 
 variables:
@@ -28,6 +23,8 @@ stages:
         packageType: 'sdk'
         version: '6.x'
         includePreviewVersions: true
+      displayName: Use .NET 6.x
+
     - task: DotNetCoreCLI@2
       displayName: Build Function App
       inputs:
@@ -43,8 +40,9 @@ stages:
         projects: |
           $(dbWorkingDirectory)/*.csproj
         arguments: --output $(System.DefaultWorkingDirectory)/publish_db_output --configuration Release
+
     - task: ArchiveFiles@2
-      displayName: 'Archive files'
+      displayName: 'Archive Function App Files'
       inputs:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)/publish_output'
         includeRootFolder: false
@@ -53,7 +51,7 @@ stages:
         replaceExistingArchive: true
 
     - task: ArchiveFiles@2
-      displayName: 'Archive Db files'
+      displayName: 'Archive DB files'
       inputs:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)/publish_db_output'
         includeRootFolder: false
@@ -62,7 +60,9 @@ stages:
         replaceExistingArchive: true
 
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      displayName: Pusblish App Artifact
       artifact: drop
 
     - publish: $(Build.ArtifactStagingDirectory)/db_$(Build.BuildId).zip
+      displayName: Publish DB Artifact
       artifact: db_drop
