--- a/cicd/buildDeploy.yml
+++ b/cicd/buildDeploy.yml
@@ -25,6 +25,7 @@ stages:
       displayName: Use .NET 6.x
 
     - task: DotNetCoreCLI@2
+      enabled: false
       displayName: Build Function App
       inputs:
         command: 'build'
@@ -41,6 +42,7 @@ stages:
         arguments: --output $(System.DefaultWorkingDirectory)/publish_db_output --configuration Release
 
     - task: ArchiveFiles@2
+      enabled: false
       displayName: 'Archive Function App Files'
       inputs:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)/publish_output'
@@ -59,6 +61,7 @@ stages:
         replaceExistingArchive: true
 
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      enabled: false
       displayName: Pusblish App Artifact
       artifact: drop
 
@@ -82,6 +85,7 @@ stages:
         deploy:
           steps:
           - task: AzureFunctionApp@1
+            enabled: false
             displayName: 'Azure functions app deploy'
             inputs:
               azureSubscription: 'azure-SN'
@@ -105,13 +109,18 @@ stages:
               downloadType: 'single'
               artifactName: 'db_drop'
               downloadPath: '$(System.ArtifactsDirectory)/DbUpArtifact'
+          - task: CmdLine@2
+            inputs:
+              script: 'ls $(System.ArtifactsDirectory)'
           - task: ExtractFiles@1
+            enabled: false
             displayName: Extract Zip
             inputs:
               archiveFilePatterns: '$(System.ArtifactsDirectory)/DbUpArtifact/*.zip'
               destinationFolder: '$(System.ArtifactsDirectory)/DbUpExtract'
               cleanDestinationFolder: false
           - task: DotNetCoreCLI@2
+            enabled: false
             inputs:
               command: 'custom'
               custom: 'ECMA.Database.dll'
