--- a/cicd/buildDeploy.yml
+++ b/cicd/buildDeploy.yml
@@ -109,8 +109,9 @@ stages:
               downloadType: 'single'
               artifactName: 'db_drop'
               downloadPath: '$(System.ArtifactsDirectory)/DbUpArtifact'
-          - task: CmdLine@2
+          - task: PowerShell@2
             inputs:
+              targetType: 'inline'
               script: 'ls $(System.ArtifactsDirectory)'
           - task: ExtractFiles@1
             enabled: false
