--- a/cicd/buildDeploy.yml
+++ b/cicd/buildDeploy.yml
@@ -25,7 +25,6 @@ stages:
       displayName: Use .NET 6.x
 
     - task: DotNetCoreCLI@2
-      enabled: false
       displayName: Build Function App
       inputs:
         command: 'build'
@@ -42,7 +41,6 @@ stages:
         arguments: --output $(System.DefaultWorkingDirectory)/publish_db_output --configuration Release
 
     - task: ArchiveFiles@2
-      enabled: false
       displayName: 'Archive Function App Files'
       inputs:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)/publish_output'
@@ -61,7 +59,6 @@ stages:
         replaceExistingArchive: true
 
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      enabled: false
       displayName: Pusblish App Artifact
       artifact: drop
 
@@ -85,7 +82,6 @@ stages:
         deploy:
           steps:
           - task: AzureFunctionApp@1
-            enabled: false
             displayName: 'Azure functions app deploy'
             inputs:
               azureSubscription: 'azure-SN'
@@ -102,14 +98,6 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: DownloadBuildArtifacts@0
-            enabled: false
-            displayName: Download DbUpDemo artifact
-            inputs:
-              buildType: 'current'
-              downloadType: 'single'
-              artifactName: 'db_drop'
-              downloadPath: '$(System.ArtifactsDirectory)/DbUpArtifact'
           - task: ExtractFiles@1
             displayName: Extract Zip
             inputs:
@@ -128,3 +116,4 @@ stages:
               command: 'custom'
               custom: 'ECMA.Database.dll'
               workingDirectory: '$(System.ArtifactsDirectory)/DbUpExtract'
+            displayName: Execute Scripts
